<resources>
    <string name="app_name">Test2</string>

    <string name="title_home">홈</string>
    <string name="title_expert">전문가</string>
    <string name="title_consult">상담방</string>
    <string name="title_diagnosis">비대면진료</string>
    <string name="title_profile">프로필</string>

    <string formatted="false" name="answer_cnt">답변 %d</string>

    <string formatted="false" name="expert_name">%s(%s)</string>
    <string name="expert_title">활동이 많은 전문가</string>

    <string formatted="false" name="company_address">%s %s</string>
    <string name="company_title">근처 의료기관</string>

    <string formatted="false" name="tag_name">#%s</string>

    <string name="no_result">검색결과가 없습니다.</string>
    <string name="api_error">인터넷 연결 상태를 확인해주세요.</string>
</resources>