<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_m_home_off"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_expert"
        android:icon="@drawable/ic_m_care_off"
        android:title="@string/title_expert" />
    <item
        android:id="@+id/navigation_consult"
        android:icon="@drawable/ic_m_chat_off"
        android:title="@string/title_consult" />
    <item
        android:id="@+id/navigation_diagnosis"
        android:icon="@drawable/ic_m_video_call_off"
        android:title="@string/title_diagnosis" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_m_me_off"
        android:title="@string/title_profile" />
</menu>

